# multi-mcp-platform

./: .gitignore  README.md  check-deps.py  pyproject.toml  setup.bat  setup.sh  start.bat  start.ps1  start.sh  test-mcps.py
backend/: mcp_orchestrator.py  requirements.txt
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: ChatArea.jsx  Header.jsx  InputArea.jsx  Message.jsx  Sidebar.jsx  TypingIndicator.jsx  WelcomeScreen.jsx
frontend/src/styles/: App.css
mcps/: bitbucket_mcp.py  confluence_mcp.py  jira_mcp.py
